# Tracker-moth

./: .gitignore  CMakeLists.txt  README  auto_annotation.py  broken_moth_tracker.cpp  distorted_moth_tracker.cpp  moth_tracker.cpp  octavio.txt  plotxy.py  progressbar.cpp  undistorted_moth_tracker.cpp
Test/: backsub.cpp  temp.txt  test  test.cpp
matlab_code/: lensdistort.m  test_lensdistort.m  test_lensdistort_gui.fig  test_lensdistort_gui.m
pyscripts/: CMakeLists.txt  auto_annotation.py  dist_m_test.txt  old_test16.txt  plotxy.py  test.csv  undist_m_test.txt  undist_m_test_100.txt  undist_test16.txt  undistort_points.py  undistorted_data.csv
